# JekTurnRight_dsde

./: .gitignore  README.md  __init__.py  aitflow.txt  best_model.pth  directory_tree.txt  model_config.json  monthly_flood_heatmap.html  pyproject.toml  rain_water_01-01-2022_to_10-01-2022.csv  requirements.txt  run_pipeline.py  run_spark.txt  test_spark_geo.py  verify_data.py
config/: log4j2.properties.py
data/model/: 2024_forecast.csv  best_model.pth  config.json  scaler.pkl  thresholds.json
jobs/: train.sh
jobs/python/: download_raw_data.py  run_pipeline.py  run_traffy_etl.py  scrape_water_levels.py  submit.sh
jobs/spark/: submit.sh  traffy_etl_job.py
notebooks/: LSTM_pipeline.ipynb  example_analysis.ipynb  insight.ipynb  insight2.ipynb  merge_scraped_data.ipynb  train.ipynb  water_scrape.ipynb
pipelines/jobs/: download_job.py  download_raw_data.py  scrape_water_levels.py  station_name_scraping.py  traffy_flood_etl.py
scrapers/traffy/: download_traffy.py
scrapers/water_level/: README.md  __init__.py  scraper.py
src/: __init__.py
src/common/: __init__.py  config.py  dataprep.py  dataprep_tmp.py  datapreps.py  insight.py  utils.py
src/dataprep/: __init__.py  cleaning.py  geo.py  io.py  mergers.py  pipeline.py
src/de/: __init__.py  settings.py  spark_session.py
src/ds/: __init__.py  analyzer.py  data_utils.py  dataset.py  deploy.py  evaluate.py  hf.py  inference.py  model.py  models.py  predict.py  scaler.pkl  test.ipynb  train.py  tune_optuna.py  tune_thresholds.py  (+2 more)
tests/: __init__.py  test_common.py  test_ds_loading.py  test_spark_cleaning.py
(+36 files in other folders)
