[project]
name = "jekturnright-dsde"
version = "0.1.0"
description = "Data Science and Data Engineering repository with uv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pyspark>=3.3.0",
    "scikit-learn>=1.3.0",
    "gdown",
    "pytest",
    "geopandas",
    "airflow",
    "apache-airflow-providers-fab",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
